feat(product): support infinite depth category tree search
- Implement Recursive CTE for unlimited category hierarchy
- Apply DB-level pagination for product listing
- Fix URL encoding mismatch for category names